# ipywardley

./: .gitignore  README.md  pyproject.toml
ipywardley/: __init__.py  wardley.py
test/: wardley-maps.ipynb
