[build-system]
requires = [
    "flit_core >=2,<4"
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ipywardley"
author = "Andrew N. Jackson"
author-email = "anj@anjackson.net"
home-page = "https://github.com/anjackson/ipywardley"
classifiers = ["License :: OSI Approved :: Apache Software License"]
description-file = "README.md"
requires = [
    "ipython", 
    "matplotlib"
]

[tool.flit.metadata.requires-extra]
test = [
    "jupyterlab"
]

